--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <meta name="description" content="My name is Ogbomo Osarumwense, the course is WDD130 and this is my homepage">
+    <meta name="author" content="Ogbomo Osarumwense">
     <title> Ogbomo Osarumwense | WDD 130 </title>
     <link rel="stylesheet" href="styles/styles.css">
 </head>
@@ -23,6 +25,12 @@
         <p>I am a certified computer scientist and a computer technician and now i am learning programming.</p>
 
     </main>
+
+    <aside>
+        <h2>Nigeria</h2>
+        <img src="images/Map-of-Nigeria-showing-the-36-states-and-Federal-Capital-Territory-FCT-Abuja.webp" alt="Map of Nigeria" width="200">
+        <p>Nigeria is a country that has 36 states and one federal capital territory. Some states may speak the same language but every state is unique in its own. </p>
+    </aside>
 
     <footer>
         <p>&copy;2025 🕸️ Ogbomo Osarumwense 🕸️ Edo, Nigeria </p>
