--- a/index.html
+++ b/index.html
@@ -20,38 +20,38 @@
         </nav>
 
     </header>
+    <div class="grid">
+        <main>
+            <h1>Ogbomo Osarumwense | WDD 130</h1>
+            <img src="images/profile.webp" alt="Ogbomo Osarumwense" width="200">
+            <p>I am a certified computer scientist and a computer technician and now i am learning programming.
+                I am currently juggling so many things right now that sometimes i feel overwhelmed.
+                one of the things i am juggling right now is my english profiency preparatory class. 
+                I need to focus and pass that if i a want to leave the country.
+                Another thing i am juggling is BYU programming, it is streesful but worth it.
+                The last Major thing is work. Juggling these things is not easy but i am confident i can do it.
+            </p>
 
-    <main>
-        <h1>Ogbomo Osarumwense | WDD 130</h1>
-        <img src="images/profile.webp" alt="Ogbomo Osarumwense" width="200">
-        <p>I am a certified computer scientist and a computer technician and now i am learning programming.
-            I am currently juggling so many things right now that sometimes i feel overwhelmed.
-            one of the things i am juggling right now is my english profiency preparatory class. 
-            I need to focus and pass that if i a want to leave the country.
-            Another thing i am juggling is BYU programming, it is streesful but worth it.
-            The last Major thing is work. Juggling these things is not easy but i am confident i can do it.
-        </p>
+            <ul class="box">
+                <li><a href="https://churchofjesuschrist.org/imgs/53cd8f853566e3d1fbb7a7619801ff4481dba7a6/full/500%2C/0/default"
+                        target="_blank">Frankfurt Germany Temple</a></li>
+                <li><a href="https://www.churchofjesuschrist.org/imgs/7210c09be95c4474772ae52e5f31c23c08112784/full/500%2C/0/default"
+                        target="_blank">Aba Nigeria Temple</a></li>
+                <li><a
+                        href="https://churchofjesuschrist.org/imgs/55f6c59ce8f9c093a9c689067f8674335de544e2/full/500%2C/0/default">Arequipa
+                        Peru Temple</a></li>
 
-        <ul class="box">
-            <li><a href="https://churchofjesuschrist.org/imgs/53cd8f853566e3d1fbb7a7619801ff4481dba7a6/full/500%2C/0/default"
-                    target="_blank">Frankfurt Germany Temple</a></li>
-            <li><a href="https://www.churchofjesuschrist.org/imgs/7210c09be95c4474772ae52e5f31c23c08112784/full/500%2C/0/default"
-                    target="_blank">Aba Nigeria Temple</a></li>
-            <li><a
-                    href="https://churchofjesuschrist.org/imgs/55f6c59ce8f9c093a9c689067f8674335de544e2/full/500%2C/0/default">Arequipa
-                    Peru Temple</a></li>
+            </ul>
+        </main>
 
-        </ul>
-    </main>
-
-    <aside class="box" >
-        <h2>Nigeria</h2>
-        <img src="images/Map-of-Nigeria-showing-the-36-states-and-Federal-Capital-Territory-FCT-Abuja.webp"
-            alt="Map of Nigeria" width="200">
-        <p>Nigeria is a country that has 36 states and one federal capital territory. Some states may speak the same
-            language but every state is unique in its own. </p>
-    </aside>
-
+        <aside class="box" >
+            <h2>Nigeria</h2>
+            <img src="images/Map-of-Nigeria-showing-the-36-states-and-Federal-Capital-Territory-FCT-Abuja.webp"
+                alt="Map of Nigeria" width="200">
+            <p>Nigeria is a country that has 36 states and one federal capital territory. Some states may speak the same
+                language but every state is unique in its own. </p>
+        </aside>
+    </div>
     
     <footer>
         <p>&copy;2025 🕸️ Ogbomo Osarumwense 🕸️ Edo, Nigeria </p>
