--- a/wwr/about.html
+++ b/wwr/about.html
@@ -25,7 +25,7 @@
 <body>
     <header>
         <img src="images/z-downriver.png" alt="Rafting Company Logo">
-        <nav>
+        <nav class="navigation">
             <a href="index.html">Home</a>
             <a href="about.html">About us</a>
             <a href="trips.html">Trips</a>
@@ -49,22 +49,42 @@
         </div>
 
         <section>
-            <h2>Histroy</h2>
-            <p>WWR started in 1997 when my family was looking for something thrilling</p>
+            <div class="flex">
+                <h2>History</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Hic, minima. Aperiam vero sint molestias quam rem autem ex et, perspiciatis, quo iste nesciunt voluptatum dolor nihil, placeat est mollitia eum.
+                </p>
+                <img src="images/rafting3.jpg" alt="rafting image">
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nemo optio est officiis maxime. Earum consequatur minima consequuntur libero distinctio obcaecati nam esse cum! Qui quasi officiis voluptatibus.</p>
+            </div>
         </section>
 
-        <section>
+        <section class="adventure">
             <h2> Adventure Awaits You</h2>
+            <div>
             <img src="images/rafting1.jpg" alt="rafting image1">
+            <p>caption</p>
+            </div>
+            <div>
             <img src="images/rafting2.jpg" alt="rafting image2">
+            <p>caption</p>
+            </div>
+            <div>
             <img src="images/rafting3.jpg" alt="rafting image3">
+            <p>caption</p>
+            </div>
+            <div>
             <img src="images/rafting4.jpg" alt="rafting image4">
+            <p>caption</p>
+            </div>
+            <div>
             <img src="images/rafting5.jpg" alt="rafting image5">
+            <p>caption</p>
+            </div>
 
         </section>
 
     </main>
-    <footer>
+    <footer class="last">
         <p>&copy; 2025 💦 White Water Rafting Company 💦 Ogbomo Osarumwense</p>
         <nav class="socialmedia">
             <a href="https://facebook.com">
