--- a/wwr/about.html
+++ b/wwr/about.html
@@ -51,34 +51,38 @@
         <section>
             <div class="flex">
                 <h2>History</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Hic, minima. Aperiam vero sint molestias quam rem autem ex et, perspiciatis, quo iste nesciunt voluptatum dolor nihil, placeat est mollitia eum.
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Hic, minima. Aperiam vero sint molestias
+                    quam rem autem ex et, perspiciatis, quo iste nesciunt voluptatum dolor nihil, placeat est mollitia
+                    eum.
                 </p>
                 <img src="images/rafting3.jpg" alt="rafting image">
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nemo optio est officiis maxime. Earum consequatur minima consequuntur libero distinctio obcaecati nam esse cum! Qui quasi officiis voluptatibus.</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nemo optio est officiis maxime. Earum
+                    consequatur minima consequuntur libero distinctio obcaecati nam esse cum! Qui quasi officiis
+                    voluptatibus.</p>
             </div>
         </section>
 
         <section class="adventure">
             <h2> Adventure Awaits You</h2>
             <div>
-            <img src="images/rafting1.jpg" alt="rafting image1">
-            <p>caption</p>
+                <img src="images/rafting1.jpg" alt="rafting image1">
+                <p>caption</p>
             </div>
             <div>
-            <img src="images/rafting2.jpg" alt="rafting image2">
-            <p>caption</p>
+                <img src="images/rafting2.jpg" alt="rafting image2">
+                <p>caption</p>
             </div>
             <div>
-            <img src="images/rafting3.jpg" alt="rafting image3">
-            <p>caption</p>
+                <img src="images/rafting3.jpg" alt="rafting image3">
+                <p>caption</p>
             </div>
             <div>
-            <img src="images/rafting4.jpg" alt="rafting image4">
-            <p>caption</p>
+                <img src="images/rafting4.jpg" alt="rafting image4">
+                <p>caption</p>
             </div>
             <div>
-            <img src="images/rafting5.jpg" alt="rafting image5">
-            <p>caption</p>
+                <img src="images/rafting5.jpg" alt="rafting image5">
+                <p>caption</p>
             </div>
 
         </section>
