contact us page

--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -114,6 +114,9 @@
                 <img src="images/instagram.svg" alt="instagram">
             </a>
         </nav>
+        <div class="moqup">
+        <a href="https://app.moqups.com/4q2DtlZBxmMGK45O4AQzoVMtYXqhvT8N/view/page/ad64222d5">moqup link</a>
+        </div>
     </footer>
     
     
