--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -7,7 +7,7 @@
     <meta name="author" content="Ogbomo Osarumwense">
     <meta name="description" content="This is my wwr contact page">
 
-    <title>wwr contact page</title>
+    <title> Whitewater Rafting Contact Page</title>
     <link rel="stylesheet" href="styles/rafting.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -83,12 +83,12 @@
                         <label>purpose of message</label>
                     </div>
                     <div class="griding row">
-                        <input type="radio" id="general inquiry" name="options" value="general inquiry">
-                        <label for="general inquiry">General inquiry</label>
-                        <input type="radio" id="reservation questions" name="options" value="reservation questions">
-                        <label for="reservation questions">Reservation Questions</label>
-                        <input type="radio" id="website suggestion" name="options" value="website suggestion">
-                        <label for="website suggestion">Website Suggestion</label>
+                        <input type="radio" id="general-inquiry" name="options" value="general-inquiry">
+                        <label for="general-inquiry">General inquiry</label>
+                        <input type="radio" id="reservation-questions" name="options" value="reservation-questions">
+                        <label for="reservation-questions">Reservation Questions</label>
+                        <input type="radio" id="website-suggestion" name="options" value="website-suggestion">
+                        <label for="website-suggestion">Website Suggestion</label>
                         <textarea name="options" id="options" rows="4" placeholder="write the purpose here"></textarea>
                     </div>
                     <div class="griding column1">
