better about page

--- a/wwr/about.html
+++ b/wwr/about.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Ogbomo Osarumwense">
-    <meta name="description" content="This is my wwr about page">
+    <meta name="description" content="This is the Whitewater Rafting about page">
 
-    <title>wwr about page</title>
+    <title>Whitewater Rafting about page</title>
     <link rel="stylesheet" href="styles/rafting.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -25,11 +25,14 @@
 <body>
     <header>
         <img src="images/z-downriver.png" alt="Rafting Company Logo">
-        <nav class="navigation">
-            <a href="index.html">Home</a>
-            <a href="about.html">About us</a>
-            <a href="trips.html">Trips</a>
-            <a href="contact.html">Contact us</a>
+
+        <nav >
+            <ul class="navigation">
+            <li><a href="index.html">Home</a></li>
+            <li><a href="about.html">About us</a></li>
+            <li><a href="trips.html">Trips</a></li>
+            <li><a href="contact.html">Contact us</a></li>
+            </ul>
         </nav>
     </header>
     <main>
@@ -48,7 +51,7 @@
 
         </div>
 
-        <section>
+        <section class="history">
             <div class="flex">
                 <h2>History</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Hic, minima. Aperiam vero sint molestias
@@ -64,26 +67,26 @@
 
         <section class="adventure">
             <h2> Adventure Awaits You</h2>
-            <div>
+            <figure>
                 <img src="images/rafting1.jpg" alt="rafting image1">
-                <p>caption</p>
-            </div>
-            <div>
+                <figcaption>caption</figcaption>
+            </figure>
+            <figure>
                 <img src="images/rafting2.jpg" alt="rafting image2">
-                <p>caption</p>
-            </div>
-            <div>
+                <figcaption>caption</figcaption>
+            </figure>
+            <figure>
                 <img src="images/rafting3.jpg" alt="rafting image3">
-                <p>caption</p>
-            </div>
-            <div>
+                <figcaption>caption</figcaption>
+            </figure>
+            <figure>
                 <img src="images/rafting4.jpg" alt="rafting image4">
-                <p>caption</p>
-            </div>
-            <div>
+                <figcaption>caption</figcaption>
+            </figure>
+            <figure>
                 <img src="images/rafting5.jpg" alt="rafting image5">
-                <p>caption</p>
-            </div>
+                <figcaption>caption</figcaption>
+            </figure>
 
         </section>
 
@@ -92,13 +95,13 @@
         <p>&copy; 2025 💦 White Water Rafting Company 💦 Ogbomo Osarumwense</p>
         <nav class="socialmedia">
             <a href="https://facebook.com">
-                <img src="images/facebook.svg" alt="Facebook">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/b/b9/2023_Facebook_icon.svg" alt="Facebook">
             </a>
             <a href="https://twitter.com">
-                <img src="images/twitter.svg" alt="Twitter">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/c/ce/X_logo_2023.svg" alt="Twitter">
             </a>
             <a href="https://instagram.com">
-                <img src="images/instagram.svg" alt="instagram">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/9/95/Instagram_logo_2022.svg" alt="instagram">
             </a>
         </nav>
     </footer>
