--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Ogbomo Osarumwense">
-    <meta name="description" content="This is my wwr contact page">
+    <meta name="description" content="This is the Whitewater Rafting contact page">
 
     <title> Whitewater Rafting Contact Page</title>
     <link rel="stylesheet" href="styles/rafting.css">
@@ -25,11 +25,13 @@
 <body>
     <header>
         <img src="images/z-downriver.png" alt="Rafting Company Logo">
-        <nav class="navigation">
-            <a href="index.html">Home</a>
-            <a href="about.html">About us</a>
-            <a href="trips.html">Trips</a>
-            <a href="contact.html">Contact us</a>
+        <nav>
+            <ul class="navigation">
+            <li><a href="index.html">Home</a></li>
+            <li><a href="about.html">About us</a></li>
+            <li><a href="trips.html">Trips</a></li>
+            <li><a href="contact.html">Contact us</a></li>
+            </ul>
         </nav>
     </header>
     <main>
@@ -107,13 +109,13 @@
         <p>&copy; 2025 💦 White Water Rafting Company 💦 Ogbomo Osarumwense</p>
         <nav class="socialmedia">
             <a href="https://facebook.com">
-                <img src="images/facebook.svg" alt="Facebook">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/b/b9/2023_Facebook_icon.svg" alt="Facebook">
             </a>
             <a href="https://twitter.com">
-                <img src="images/twitter.svg" alt="Twitter">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/c/ce/X_logo_2023.svg" alt="Twitter">
             </a>
             <a href="https://instagram.com">
-                <img src="images/instagram.svg" alt="instagram">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/9/95/Instagram_logo_2022.svg" alt="instagram">
             </a>
         </nav>
         <a href="https://app.moqups.com/4q2DtlZBxmMGK45O4AQzoVMtYXqhvT8N/view/page/ad64222d5">moqup link</a>
