--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -98,7 +98,7 @@
                         <input type="checkbox" id="subscribe" name="subscribe">
                     </div>
                 </fieldset>
-                <button type="submit">submit</button>
+                <button type="submit">click to submit form</button>
 
             </form>
         </div>
