savwd about page

--- a/wwr/about.html
+++ b/wwr/about.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Ogbomo Osarumwense">
-    <meta name="description" content="This is the Whitewater Rafting about page">
+    <meta name="description" content="Learn about White Water Rafting Company's passion for adventure and commitment to safety. Discover our story, mission, and what makes us unique.">
 
     <title>Whitewater Rafting about page</title>
     <link rel="stylesheet" href="styles/rafting.css">
