--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Ogbomo Osarumwense">
-    <meta name="description" content="This is the Whitewater Rafting contact page">
+    <meta name="description" content="Get in touch with White Water Rafting Company. Find our contact form, phone number, and email for all inquiries and support.">
 
     <title> Whitewater Rafting Contact Page</title>
     <link rel="stylesheet" href="styles/rafting.css">
