--- a/wwr/index.html
+++ b/wwr/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Ogbomo Osarumwense">
-    <meta name="description" content="This is the Whitewater Rafting Home page">
+    <meta name="description" content="Your ultimate guide to thrilling whitewater rafting adventures. Explore trips, learn about us, and contact us for an unforgettable experience.">
 
     <title>Whitewater Rafting home page</title>
     <link rel="stylesheet" href="styles/rafting.css">
