--- a/wwr/trips.html
+++ b/wwr/trips.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Ogbomo Osarumwense">
-    <meta name="description" content="This is the Whitewater Rafting trips page">
+    <meta name="description" content="Discover your next whitewater rafting adventure with us! Browse our diverse selection of trips designed for all skill levels and thrill preferences.">
 
     <title>Whitewater Rafting trips page</title>
     <link rel="stylesheet" href="styles/rafting.css">
